# otus-cpp-basics

./: README.md
hw2/hello/: CMakeLists.txt  hello_world.cpp
hw3/: README.md
hw3/magic_number/: CMakeLists.txt  argument.cpp  argument.h  game.cpp  game.h  high_scores.cpp  high_scores.h  main.cpp  types.h
hw4/: README.md
hw4/physical_simulator/: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Physics.cpp  Point.hpp  Velocity.hpp  World.cpp  main.cpp
hw4/physical_simulator/data/: elephant2.txt
hw5/: README.md
hw5/statistics/: CMakeLists.txt  statistics.cpp
hw6/: README.md
hw6/container/: CMakeLists.txt  container_list.hpp  container_serial.hpp  main.cpp
hw6/container/src/: container_list.hpp  container_serial.hpp  main.cpp
hw6/container/test/: ContainerList_tests.cpp  ContainerSerial_tests.cpp  main_test.cpp
